# ecg_app

./: .dockerignore  .gitignore  100.dat:Zone.Identifier  CMakeLists.txt  CMakeLists.txt.user.ab5c198  Dockerfile  README.md  docker-compose.yml  helloworld  helloworld.cpp  how-to-docker.md  main.cpp
.qtcreator/config/: QtCreator.db  QtCreator.ini
.qtcreator/config/qtcreator/: cmaketools.xml  debuggers.xml  devices.xml  helpcollection.qhc  profiles.xml  qtversion.xml  toolchains.xml
.qtcreator/config/qtcreator/qnx/: qnxconfigurations.xml
Wykresy/: CMakeLists.txt
Wykresy/Header Files/: basic_plot.h  histogram_plot.h  scatter_plot.h  table.h  waves_plot.h
Wykresy/Source Files/: basic_plot.cpp  histogram_plot.cpp  scatter_plot.cpp  table.cpp  waves_plot.cpp
include/: Baseline.h  Filter.h  RPeaks.h  Signal.h
include/Baseline/: Baseline.h  LMSFilter.h  MovingMeanFilter.h  SavitzkyGolayFilter.h
include/DataReader/: DataReader.h
include/HRV_1/: HRV_1.h
include/HRV_2/: HRV_2.h
include/Model/Baseline/: Baseline.h  ButterworthFilter.h  Filter.h  LMSFilter.h  MovingMeanFilter.h  SavitzkyGolayFilter.h
include/Model/DataReader/: DataReader.h
include/Model/HRV_1/: FrequencyDomainHRV.h  HRV_1.h  LombScarglePeriodogram.h  RRIntervals.h  TimeDomainHRV.h
include/Model/HRV_2/: HRV_2.h  IntervalHistogramGenerator.h  PoincarePlotGenerator.h  RRIntervals.h  SDsCalculator.h  TiNNCalculator.h  TriangularIndexCalculator.h
include/Model/HRV_DFA/: HRV_DFA.h
include/Model/HeartClass/: HeartClass.h
include/Model/RPeaks/: RPeaks.h
include/Model/Signal/: Signal.h
include/Model/Waves/: Waves.h
include/Waves/: Waves.h
src/: Baseline.cpp  Filter.cpp  HRV_1.cpp  HRV_2.cpp  HRV_DFA.cpp  HeartClass.cpp  Signal.cpp  Waves.cpp
src/Baseline/: Baseline.cpp  ButterworthFilter.cpp  LMSFilter.cpp  SavitzkyGolayFilter.cpp
src/HRV_1/: HRV_1.cpp
src/Model/Baseline/: Baseline.cpp  ButterworthFilter.cpp  CMakeLists.txt  LMSFilter.cpp  MovingMeanFilter.cpp  SavitzkyGolayFilter.cpp
src/Model/Baseline/LMS/: CMakeLists.txt
src/Model/Baseline/LMS/src/: AdaptiveFilter.h
src/Model/Baseline/gram_savitzky_golay/: CMakeLists.txt
src/Model/Baseline/libbutterworth/: CMakeLists.txt
src/Model/DataReader/: DataReader.cpp
src/Model/HRV_1/: FrequencyDomainHRV.cpp  HRV_1.cpp  LombScarglePeriodogram.cpp  RRIntervals.cpp  TimeDomainHRV.cpp
src/Model/HRV_2/: HRV_2.cpp  IntervalHistogramGenerator.cpp  PoincarePlotGenerator.cpp  RRIntervals.cpp  SDsCalculator.cpp  TiNNCalculator.cpp  TriangularIndexCalculator.cpp
src/Model/HRV_DFA/: HRV_DFA.cpp
src/Model/HeartClass/: HeartClass.cpp
src/Model/RPeaks/: RPeaks.cpp
src/Model/Signal/: Signal.cpp
src/Model/Waves/: Waves.cpp
src/View/MainWindow/: baselineform.cpp  baselineform.h  baselineform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  rpeaksform.cpp  rpeaksform.h  rpeaksform.ui  settingsform.cpp  settingsform.h  settingsform.ui
src/View/MainWindow_do_Zmergowania/MainWindow/: baselineform.cpp  baselineform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  rpeaksform.cpp  rpeaksform.ui  settingsform.h  settingsform.ui
src/View/SettingsForm/: settingsform.cpp  settingsform.h  settingsform.ui
tests/: HRV_2_tests.cpp  test_signal.cpp
